objects/Apttus_Approval__ApprovalProcessInstance__c.object
<CustomObject>
    <description>Represents an instance of a single, end-to-end approval process.</description>
    <fields>
        <fullName>Apttus_Approval__ApprovalProcessId__c</fullName>
        <description>ID of the approval process associated with the instance</description>
        <label>Approval Process</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Process Instances</relationshipLabel>
        <relationshipName>ApprovalProcessInstances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssignmentEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is submitted.</description>
        <label>Assignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObjectId__c</fullName>
        <description>ID of the associated business object</description>
        <label>Business Object</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObjectLink__c</fullName>
        <description>The link to the associated business object</description>
        <formula>HYPERLINK(Apttus_Approval__BusinessObjectId__c , &quot;View &quot; &amp; Apttus_Approval__BusinessObjectType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Object Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObjectType__c</fullName>
        <description>The business object type</description>
        <label>Business Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CancellationEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is cancelled.</description>
        <label>Cancellation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ConsolidationVersionNumber__c</fullName>
        <description>Consolidation Implementation Version Number</description>
        <inlineHelpText>Consolidation Implementation Version Number</inlineHelpText>
        <label>Consolidation Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Data__c</fullName>
        <description>Approval Data Cache</description>
        <inlineHelpText>Approval Data Cache</inlineHelpText>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EndTime__c</fullName>
        <description>the process end time</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalationEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is escalated.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is escalated.</inlineHelpText>
        <label>Escalation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__InstanceNumber__c</fullName>
        <description>The process instance number</description>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Instance Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__NotifyOnlyEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when a notify only process step is executed.</description>
        <label>NotifyOnly Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__OriginalParentApprovalProcessId__c</fullName>
        <description>Holds reference to the original process definition id - because we are creating a temporary process definition for each process instance - to avoid locking contention - please refer to Jira - AWA-1970 for further details.</description>
        <inlineHelpText>Holds reference to the original process definition id</inlineHelpText>
        <label>Original Parent Approval Process</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__PrevProcessInstanceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the previous process instance. Only applicable to resubmissions</description>
        <inlineHelpText>ID of the previous process instance. Only applicable to resubmissions</inlineHelpText>
        <label>Previous Process Instance</label>
        <referenceTo>Apttus_Approval__ApprovalProcessInstance__c</referenceTo>
        <relationshipLabel>Previous Process Instances</relationshipLabel>
        <relationshipName>PrevProcessInstances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReassignmentEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is reassigned.</description>
        <label>Reassignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReminderEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send reminder notifications for an approval request.</description>
        <inlineHelpText>The name of the Email Template used to send reminder notifications for an approval request.</inlineHelpText>
        <label>Reminder Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StartTime__c</fullName>
        <description>The process start time</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Status__c</fullName>
        <description>The status of this approval process instance, for example Submitted,
Cancelled, or Approved.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval Process Instance</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Process Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>